--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             background: red;
         }
     </style>
-    <title>Document</title>
+    <title>Book List</title>
 </head>
 <body>
     <div class="container">
